added retina.js files
test

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
   <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +13,8 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="canonical" href="http://constellation.software/">
   <link rel="alternate" type="application/rss+xml" title="Constellation Software" href="http://constellation.software/feed.xml" />
+
+  <script type="text/javascript" src="/js/retina.js"></script>
 </head>
 
 
@@ -120,4 +121,3 @@
   </body>
 
 </html>
-
