Tweaks to Milk Pail Page
Minor copy edits

--- a/milkpail/index.html
+++ b/milkpail/index.html
@@ -74,7 +74,11 @@
 <p><img src="/img/medium_portrait/milkpail.png" style="float: right;" />
 Keeping track of your baby’s feeding schedule is important, but most apps overwhelm users with excessive options and fine grained details. These features can be useful for mothers who need to pump or use formula, but most mothers want to simply track session length and time so they can provide useful data for their pediatrician.</p>
 
-<p>Milk Pail helps you do just that. Start your session by tapping <em>Left</em> or <em>Right</em> and then tap <em>Start</em>. When you finish, tap <em>End</em>. The alternate breast will be automatically selected for your next session, and information about all your sessions, including average session length (in total and per breast) is available in <em>Stats</em>.</p>
+<p>Milk Pail helps you do just that. Start your session by tapping <strong>Left</strong> or <strong>Right</strong> and then tap <strong>Start</strong>.</p>
+
+<p>When you finish, tap <strong>End</strong>. Milk Pail automatically selects the alternate breast for your next session.</p>
+
+<p>Information about all your sessions, including average session length (in total and per breast) is available in <strong>Stats</strong>.</p>
 
 
   </article>
