--- a/milkpail/index.html
+++ b/milkpail/index.html
@@ -11,11 +11,13 @@
 ">
 
   
+  <!- HI! ->
+  <meta name="apple-itunes-app" content="app-id=1032827064">
+  
 
   <link rel="stylesheet" href="/css/main.css">
   <link rel="canonical" href="http://constellation.software/milkpail/">
   <link rel="alternate" type="application/rss+xml" title="Constellation Software" href="http://constellation.software/feed.xml" />
-
   <script type="text/javascript" src="/js/retina.js"></script>
 </head>
 
