--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html>
 
   <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Constellation Software LLC</title>
-  <meta name="description" content="Constellation Software is an iOS and web development firm located in Akron Ohio.
+    <title>Constellation Software LLC</title>
+    <meta name="description" content="Constellation Software is an iOS and web development firm located in Akron Ohio.
 ">
 
-  
+    
 
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="http://constellation.software/">
-  <link rel="alternate" type="application/rss+xml" title="Constellation Software LLC" href="http://constellation.software/feed.xml" />
-  <script type="text/javascript" src="/js/retina.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="canonical" href="http://constellation.software/">
+    <link rel="alternate" type="application/rss+xml" title="Constellation Software LLC" href="http://constellation.software/feed.xml" />
+    <script type="text/javascript" src="/js/retina.js"></script>
+    
+
 </head>
 
 
@@ -23,7 +25,7 @@
 
     <header class="site-header">
 
-  <div class="wrapper">
+  <div class="wrapper" onscroll="scrollAlpha">
 
     <a class="site-title" href="/">Constellation Software LLC
 </a>
