Basic Layout Enzo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Constellation Software LLC</title>
+    <title>Constellation Software</title>
     <meta name="description" content="Constellation Software is an iOS and web development firm located in Akron Ohio.
 ">
 
@@ -14,8 +14,8 @@
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="canonical" href="http://constellation.software/">
-    <link rel="alternate" type="application/rss+xml" title="Constellation Software LLC" href="http://constellation.software/feed.xml" />
-    <script type="text/javascript" src="/js/retina.js"></script>
+    <link rel="alternate" type="application/rss+xml" title="Constellation Software" href="http://constellation.software/feed.xml" />
+
     
 
 </head>
@@ -27,7 +27,7 @@
 
   <div class="wrapper" onscroll="scrollAlpha">
 
-    <a class="site-title" href="/">Constellation Software LLC
+    <a class="site-title" href="/">Constellation Software
 </a>
 
     <nav class="site-nav">
@@ -104,12 +104,12 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">Constellation Software LLC</h2>
+    <h2 class="footer-heading">Constellation Software</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>Constellation Software LLC</li>
+          <li>Constellation Software</li>
           <li><a href="mailto:ben@constellation.software">ben@constellation.software</a></li>
         </ul>
       </div>
@@ -132,7 +132,7 @@
 
 </footer>
 
-
+    <script type="text/javascript" src="/js/retina.js"></script>
   </body>
 
 </html>
