--- a/enzo/index.html
+++ b/enzo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +23,7 @@
 </head>
 
 
-  <body id="enzo">
+<body id="enzo">
 
     <header class="site-header">
 
@@ -67,11 +67,17 @@
 
     <div class="page-content">
       <div class="wrapper"> 
-        <h1 id="a-simple-meditation-clock-for-ios">A simple meditation clock for iOS</h1>
+          <video id="v0", tabIndex="0", autobuffer="autobuffer", preload="preload">
+<!--           <source type="video/webm; codecs=&quot;vp8, vorbis&quot;" src="video/"></source>
+            <source type="video/ogg; codecs=&quot;theora, vorbis&quot;" src="http://www.html5rocks.com/tutorials/video/basics/Chrome_ImF.ogv"></source> -->
+            <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="/video/enzo_composite.m4v"></source>
+            <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
+        </video>
+        <h1 id="hello-enzo">Hello Enzo!</h1>
 
 <h3 id="enzo-is-a-clock-that-helps-beginners-meditate">Enzo is a clock that helps beginners meditate.</h3>
 
-<p>Sitting in concentration for extended periods of time is difficult at first, and it helps to have some gentle reminders to stay focused during your session. <img id="hero" src="/img/large_portrait/6s.png" style="float: right;" /></p>
+<p>Sitting in concentration for extended periods of time is difficult at first, and it helps to have some gentle reminders to stay focused during your session.</p>
 
 <h3 id="enzo-is-different">Enzo is different</h3>
 
@@ -91,9 +97,9 @@
 
 <p>Enzo will available on the app store December 17 for $1.99.</p>
 
-      </div>
     </div>
-    <!-- <footer class="site-footer">
+</div>
+<!-- <footer class="site-footer">
 
   <div class="wrapper">
 
@@ -125,7 +131,7 @@
 
 </footer>
  -->
-    <script type="text/javascript" src="/js/retina.js"></script>
-  </body>
+<script type="text/javascript" src="/js/retina.js"></script>
+</body>
 
 </html>
