--- a/enzo/index.html
+++ b/enzo/index.html
@@ -67,7 +67,7 @@
 
     <div class="page-content">
       <div class="wrapper"> 
-          <video id="v0", tabIndex="0", autobuffer="autobuffer", preload="preload">
+          <video id="v0", tabIndex="0", autobuffer="autobuffer", preload="preload", autoplay>
 <!--           <source type="video/webm; codecs=&quot;vp8, vorbis&quot;" src="video/"></source>
             <source type="video/ogg; codecs=&quot;theora, vorbis&quot;" src="http://www.html5rocks.com/tutorials/video/basics/Chrome_ImF.ogv"></source> -->
             <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="/video/enzo_composite.m4v"></source>
