--- a/enzo/index.html
+++ b/enzo/index.html
@@ -70,14 +70,16 @@
           <video id="v0", tabIndex="0", autobuffer="autobuffer", preload="preload">
 <!--           <source type="video/webm; codecs=&quot;vp8, vorbis&quot;" src="video/"></source>
             <source type="video/ogg; codecs=&quot;theora, vorbis&quot;" src="http://www.html5rocks.com/tutorials/video/basics/Chrome_ImF.ogv"></source> -->
-            <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="/video/enzo_composite.m4v"></source>
+            <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="/video/enzo_standalone.m4v"></source>
             <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
         </video>
         <h1 id="hello-enzo">Hello Enzo!</h1>
 
-<h3 id="enzo-is-a-clock-that-helps-beginners-meditate">Enzo is a clock that helps beginners meditate.</h3>
+<h2 id="a-simple-meditation-clock-for-ios">A simple meditation clock for iOS</h2>
 
-<p>Sitting in concentration for extended periods of time is difficult at first, and it helps to have some gentle reminders to stay focused during your session.</p>
+<h3 id="enzo-helps-beginners-meditate">Enzo helps beginners meditate</h3>
+
+<p>Sitting in concentration for extended periods of time is difficult at first, and it helps to have some gentle reminders to stay focused during your session. <img id="hero" src="/img/large_portrait/6srg.png" style="float: right;" /></p>
 
 <h3 id="enzo-is-different">Enzo is different</h3>
 
