--- a/enzo/index.html
+++ b/enzo/index.html
@@ -67,21 +67,16 @@
 
     <div class="page-content">
       <div class="wrapper"> 
-          <video id="v0", tabIndex="0", autobuffer="autobuffer", preload="preload">
-<!--           <source type="video/webm; codecs=&quot;vp8, vorbis&quot;" src="video/"></source>
-            <source type="video/ogg; codecs=&quot;theora, vorbis&quot;" src="http://www.html5rocks.com/tutorials/video/basics/Chrome_ImF.ogv"></source> -->
-            <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="/video/enzo_composite.m4v"></source>
-            <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
-        </video>
+          
         <h1 id="hello-enzo">Hello Enzo!</h1>
 
 <h2 id="a-simple-meditation-clock-for-ios">A simple meditation clock for iOS</h2>
 
 <h3 id="enzo-helps-beginners-meditate">Enzo helps beginners meditate</h3>
 
-<p>Sitting in concentration for extended periods of time is difficult at first, and it helps to have some gentle reminders to stay focused during your session.<!--  <img id="hero" src="/img/large_portrait/6srg.png" style="float: right;"/> 
- -->
-### Enzo is different</p>
+<p>Sitting in concentration for extended periods of time is difficult at first, and it helps to have some gentle reminders to stay focused during your session. <img id="hero" src="/img/large_portrait/enzo6s.png" /></p>
+
+<h3 id="enzo-is-different">Enzo is different</h3>
 
 <p>It splits up a complete session into a series of shorter intervals strung together, acting as an elegant companion to your practice.</p>
 
@@ -89,6 +84,7 @@
 <p>In the center of the screen is a glowing brushstroke. Simply tap and drag it out in a circle for as long as you’d like each interval to last. To help keep anxiety and restlessness at bay, intervals are limited to ten minutes or less.</p>
 
 <h3 id="enzo-is-unique">Enzo is unique</h3>
+
 <p>Every session’s brushstroke is an individually generated animation that very subtly shifts and changes as the seconds pass by. If you prefer focusing on a visual or feel the need to open your eyes during your session, the screen itself is designed to provide a calming and simple point of focus.</p>
 
 <p>No words, no numbers, just a slowly fading spiral of color.</p>
