--- a/enzo/index.html
+++ b/enzo/index.html
@@ -72,9 +72,11 @@
 
 <h2 id="a-simple-meditation-clock-for-ios">A simple meditation clock for iOS</h2>
 
+<p><img class="hero" src="/img/large_portrait/enzo6s.png" /></p>
+
 <h3 id="enzo-helps-beginners-meditate">Enzo helps beginners meditate</h3>
 
-<p>Sitting in concentration for extended periods of time is difficult at first, and it helps to have some gentle reminders to stay focused during your session. <img id="hero" src="/img/large_portrait/enzo6s.png" /></p>
+<p>Sitting in concentration for extended periods of time is difficult at first, and it helps to have some gentle reminders to stay focused during your session.</p>
 
 <h3 id="enzo-is-different">Enzo is different</h3>
 
