--- a/enzo/index.html
+++ b/enzo/index.html
@@ -102,6 +102,8 @@
 
 <p>If you’ve never meditated before, <em>take it easy!</em> Aim for a few minutes and go from there. Just a smudge of color at first! You’ll close the circle soon enough.</p>
 
+<p>For more information please see the <strong><a href="/pdf/EnzoPress12-10-15.pdf">Press Kit</a></strong> or email <strong><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#098;&#101;&#110;&#064;&#099;&#111;&#110;&#115;&#116;&#101;&#108;&#108;&#097;&#116;&#105;&#111;&#110;&#046;&#115;&#111;&#102;&#116;&#119;&#097;&#114;&#101;">&#098;&#101;&#110;&#064;&#099;&#111;&#110;&#115;&#116;&#101;&#108;&#108;&#097;&#116;&#105;&#111;&#110;&#046;&#115;&#111;&#102;&#116;&#119;&#097;&#114;&#101;</a></strong></p>
+
 <!-- 
 <a  href=""><img class="app_store_icon" src="/img/large_portrait/enzo_icon.png"/> </a>
 
