Google Analytics tracking

--- a/enzo/index.html
+++ b/enzo/index.html
@@ -21,6 +21,7 @@
     
         <script type="text/javascript" src="/js/enzo.js"></script>
     
+        <script type="text/javascript" src="/js/ga.js"></script>
 
 </head>
 
