--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="alternate" type="application/rss+xml" title="Constellation Software" href="http://constellation.software/feed.xml" />
 
     
+        <script type="text/javascript" src="/js/ga.js"></script>
 
 </head>
 
